--- a/styles.css
+++ b/styles.css
@@ -21,13 +21,14 @@ h1 {
 }
 
 #note-input {
-  width: 100%;
+  width: 93%; /* Устанавливаем ширину на 100% */
   height: 60px;
   background-color: #555555;
   border: none;
   color: white;
   padding: 10px;
   font-size: 14px;
+  resize: vertical; /* Разрешить изменение высоты */
 }
 
 #add-note {
@@ -56,11 +57,28 @@ h1 {
   padding: 10px;
   border-radius: 4px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column; /* Выравниваем по вертикали */
+  align-items: center; /* Центрируем по горизонтали */
 }
 
-.delete-note {
+.note-content {
+  padding: 10px;
+  border-radius: 4px;
+  background-color: #444444;
+  width: 100%;
+  text-align: left;
+}
+
+.note-actions {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 5px;
+  align-items: flex-end; /* Выравниваем элементы по нижнему краю */
+}
+
+.delete-note,
+.edit-note {
   background-color: #45a049;
   border: none;
   color: white;
@@ -69,6 +87,13 @@ h1 {
   font-size: 12px;
 }
 
-.delete-note:hover {
+.delete-note:hover,
+.edit-note:hover {
   background-color: #3e8e41;
+}
+
+.note-date {
+  font-size: 12px;
+  color: #777;
+  margin-top: 5px;
 }
